# ab-utils

./: .gitignore  .gitmodules  CustomDeque.h  Matrix.cpp  Matrix.h  README.md
idioms/: AnyContainer.h  TypeErasure.cpp  TypeErasure.h
idioms/crtp/: StateComparator.cpp
idioms/patterns/builder/: File.cpp
idioms/patterns/singleton/: FileStorage.cpp  FileStorage.hpp
idioms/pimpl/modern_pimpl/: ModernPimpl.cpp  ModernPimpl.h  client.cpp
patterns/decorator/: dynamic.cpp  static.cpp
snippets/: StreamIterators.cpp
snippets/async/boost-asio-playground/: CMakeLists.txt  compile
snippets/async/boost-asio-playground/src/: main.cpp
snippets/async/boost-async-tcp-client-server/: CMakeLists.txt  README.md
snippets/async/boost-async-tcp-client-server/src/: TcpClient.cpp  TcpServer.cpp
snippets/generic/: Printer.h  PrinterTest  PrinterTest.cpp  TypeTraits.h
snippets/is_related/: related.cpp
snippets/stream_iterators/: StreamIterators.cpp  dst.file  src.file
snippets/string_view/: StringView.cpp  string_reverse.cpp  string_reverse_benchmark.cpp
snippets/threads/: FileOperator.cpp  ReadWrite.cpp
stl/: CMakeLists.txt
stl/include/: AnyContainer.h  CustomDeque.h  UtilityFunctions.h  Vector.h
stl/scripts/: compile.sh  performance.sh
stl/src/: Main.cpp
stl/test/: CMakeLists.txt  RunTests.cpp  STLHelperTest.cpp  VectorTest.cpp
stl_algorithms/: Iterator.h  Main.cpp  UtilFunc.h  Vector.cpp  Vector.h  compile.sh
tools/: FileWatchTester.cpp  FileWatcher.h
tools/commandline/: CmdLineReader.cpp
tools/filesystem/: FileWatchTester.cpp  FileWatcher.h
tools/filewatcher/: FileWatchTester.cpp  FileWatcher.h
tools/pgnlib/: CMakeLists.txt  README.md  compile
tools/pgnlib/data/: MultipleGames.pgn  SingleGame.pgn
tools/pgnlib/include/: DataTypes.h  Game.h  IDisplay.h  IFeeder.h  IGame.h  PgnDisplay.h  PgnExtractor.h  PgnFeeder.h  PgnValidator.h  TerminalDisplay.h
tools/pgnlib/src/: PgnDisplay.cpp  PgnExtractor.cpp  PgnLib.cpp  PgnValidator.cpp  main.cpp
